2008-05-21  Eric Blake  <ebb9@byu.net>

	Optimize strchr for x86.
	* libc/machine/i386/strchr.S (strchr): Pre-align data so unaligned
	searches aren't penalized.  Special-case searching for 0.

2008-05-20  Nick Clifton  <nickc@redhat.com>

	* libc/sys/sysnecv850/crt0.S (___dso_handle): Define (weak).

2008-05-20  DJ Delorie  <dj@redhat.com>

	* libc/sys/sysnecv850/isatty.c (_isatty): Renamed from isatty.

2008-05-14  Jeff Johnston  <jjohnstn@redhat.com>

	* libc/include/sys/reent.h: Change _REENT_INIT... macros to
	access macro parameter with parentheses around it.

2008-04-26  Mark Mitchell  <mark@codesourcery.com>

	* libc/include/stdint.h (SIZE_MIN): Remove.
	(SIZE_MAX): Define.
	* testsuite/newlib.stdlib/stdlib.exp: New.
	* testsuite/newlib.stdlib/size_max.c: Likewise.

2008-04-29  Eric Blake  <ebb9@byu.net>

	Fix 2008-04-14 regression in asprintf(ptr,"").
	* libc/stdio/asnprintf.c (asnprintf, _asnprintf_r): Avoid stdio
	baggage.
	* libc/stdio/asniprintf.c (asniprintf, _asniprintf_r): Likewise.
	* libc/stdio/asiprintf.c (asiprintf, _asiprintf_r): Likewise.
	* libc/stdio/vasniprintf.c (_vasniprintf_r): Likewise.
	* libc/stdio/vsnprintf.c (_vsnprintf_r): Likewise.
	* libc/stdio/vfprintf.c (_VFPRINTF_R) [STRING_ONLY]: Always malloc
	an initial buffer for asprintf.

2008-04-24  Corinna Vinschen  <corinna@vinschen.de>

	* libc/include/sys/stat.h: Guard at-functions with !__INSIDE_CYGWIN__.
	(fstatat): Fix type of third parameter.

2008-04-25  Nick Clifton  <nickc@redhat.com>

	* libc/machine/arm/setjmp.S: Fix thumb2 support.

2008-04-24  Nick Clifton  <nickc@redhat.com>

	* libc/include/machine/ieeefp.h: Fix typo: _DOUBLE_IS_32_BITS
	should be _DOUBLE_IS_32BITS.

2008-04-24  Corinna Vinschen  <corinna@vinschen.de>

	* libc/include/sys/stat.h (UTIME_NOW): Define for Cygwin.
	(UTIME_OMIT): Ditto.
	(utimensat): Declare for Cygwin.
	(futimens): Ditto.

2008-04-23  Ken Werner  <ken.werner@de.ibm.com>

	* libc/include/_ansi.h: _LONG_LONG renamed to _LONG_LONG_TYPE.